<resources>
    <string name="app_name">APPOINTMENTS SCHEDULER</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="my_appointments">MY APPOINTMENTS</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="Occupation">SELECT A SUITABLE OPTION BELOW</string>
    <string name="Doctor">DOCTOR</string>
    <string name="PATIENT">PATIENT</string>
    <string name="id_number">ID Number</string>
    <string name="phone_no">Phone No</string>
    <string name="employee">Employee no:</string>
    <string name="time_availability">Time Available</string>
    <string name="department">Department</string>
    <string name="specialist">Specialist</string>
    <string name="register">REGISTER</string>
    <string name="register_with_us">Register With Us?</string>
    <string name="username">Username</string>
    <string name="title_activity_user_code">userCode</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textverificationinprogress">VERIFICATION IN PROGRESS......</string>
    <string name="textokay">DONE</string>
    <string name="category">CHOOSE A CATEGORY</string>
    <string name="text_admin">ADMIN</string>
    <string name="tododescribe">TODO</string>
    <string name="enter_code_text">ENTER CODE</string>
    <string name="code_admin">ENTER ADMIN CODE BELOW</string>
    <string name="proceedbutton">PROCEED</string>
    <string name="bookappointment">BOOK APPOINTMENT</string>
    <string name="consult_a_doctor">CONSULT A DOCTOR</string>
    <string name="appointments_history">APPOINTMENTS HISTORY</string>
    <string name="contact_us">CONTACT US</string>
    <string name="view_lab_reports">VIEW LAB REPORTS</string>
    <string name="descriptiontext">Description</string>
    <string name="departmentCAPS">Department</string>
    <string name="dateCAPS">DATE</string>
    <string name="timeavailableCAPS">Time Available</string>
    <string name="details">Fill in your details</string>
    <string name="symptomshint">Describe your symptoms</string>
    <string name="newAppointment">NEW APPOINTMENT</string>
    <string name="canelAppointment">ARE YOU SURE YOU WANT TO CANCEL THIS APPOINTMENT?</string>
    <string name="btnYES">YES</string>
    <string name="btnNO">NO</string>
    <string name="btnrefresh">REFRESH PAGE</string>
    <string name="btnBack">BACK</string>
    <string name="how_are_you">How Are You Doing Today?</string>
    <string name="manageappointments">MANAGE APPOINTMENTS</string>
    <string name="managedoctors">MANAGE DOCTORS</string>
    <string name="managepatients">MANAGE PATIENTS</string>
    <string name="doctorassigned">Doctor Assigned</string>
    <string name="name">Name</string>
    <string name="pending">Pending......</string>
    <string name="selectanappointment">SELECT AN APPOINTMENT TO  VIEW DETAILS</string>
    <string name="view">VIEW</string>
    <string name="assign">ASSIGN DOCTOR</string>
    <string name="firstname">FIRST NAME</string>
    <string name="secondname">SECOND NAME</string>
    <string name="memail">EMAIL</string>
    <string name="mPassword">PASSWORD</string>
    <string name="selectadoctor">SELECT A DOCTOR TO VIEW DETAILS</string>
    <string name="CONSULTANCY">CONSULTANCY</string>
    <string name="mylabreports">LAB REPORTS</string>
    <string name="SelectANEmail">SELECT AN EMAIL TO VIEW PATIENT\'S DETAILS</string>
    <string name="selectEmail">SELECT AN EMAIL  BELOW TO VIEW  DOCTOR\'S DETAILS</string>
    <string name="approvebutton">APPROVE</string>
    <string name="rejectbutton">REJECT</string>
    <string name="emailViewAppointmentsdetails">SELECT AN EMAIL TO VIEW APPOINTMENT DETAILS</string>
    <string name="cancelAppointment">CANCEL APPOINTMENT</string>
    <string name="appointmentattended">APPOINTMENTS ATTENDED</string>
    <string name="detailsAppointment">APPOINTMENT DETAILS CAPTURED SUCCESSFULLY</string>
    <string name="ClickHereToTypeAMessage">Type A Message</string>
    <string name="refresh">REFRESH</string>
    <string name="chat">CHAT</string>
    <string name="consult">CONSULT</string>
    <string name="selectapatient">SELECT A PATIENT</string>
    <string name="title">TITLE</string>
    <string name="doctorname">DOCTOR NAME</string>
    <string name="testresult">TESTRESULT</string>
    <string name="conclusion">CONCLUSION</string>
    <string name="sendreport">SEND REPORT</string>
    <string name="medicalreport">MEDICAL LAB REPORT</string>
    <string name="doctorregistered">DOCTORS REGISTERED</string>
    <string name="patientregistered">PATIENTS  REGISTERED</string>
    <string name="appointmentsattended">APPOINTMENTS ATTENDED</string>
    <string name="reports">REPORTS</string>
    <string name="adminreports">ADMIN REPORTS</string>
    <string name="admin">HELLO ADMIN,</string>
    <string name="appointments">APPOINTMENTS SCHEDULER</string>
    <string name="tech">~DALTY TECHNOLOGIES~</string>
    <string name="contacttextview">DEVELOPERS DETAILS</string>
    <string name="phonenumber">0718732506/0771013110</string>
    <string name="devemail">daltonleyian@gmail.com</string>
    <string name="devlocation">Kileleshwa Banor\'s Plaza 12th floor 206B</string>
    <string name="send">SEND</string>
    <string name="patientmessages">PATIENT\'S MESSAGES</string>
    <string name="age">AGE</string>
    <string name="county">County</string>
    <string name="title_activity_patient_main_page">Patient_Main_Page_Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="empty">,</string>
    <string name="appointment">APPOINTMENTS</string>
    <string name="upcoming_appointment">Upcoming Appointments</string>
    <string name="hello">HELLO, DALTON!</string>
    <string name="consultation">CONSULTATION</string>
    <string name="date">06, February 2023</string>
    <string name="reports_word">REPORTS</string>
    <string name="history">HISTORY</string>
    <string name="not_yet_assigned">"Not yet assigned"</string>
    <string name="time">TIME</string>
    <string name="date_available">Date Available</string>
    <string name="patients_age">Patient\'s Age</string>
    <string name="enter_age">Enter age here</string>
    <string name="select_date_new">Select Date</string>
    <string name="description">Appointment description</string>
    <string name="network_issue">CHECK YOUR NETWORK CONNECTION!</string>
    <string name="patient_name">Patient\'s Name</string>
    <string name="mark_attended">Mark Attended</string>
    <string name="cancel_Appointment">Cancel Appointment</string>
    <string name="age_Small">Age</string>
    <string name="welcome">Welcome Back.</string>
    <string name="scoreboard">My ScoreBoard</string>
    <string name="attended">Attended</string>
    <string name="cancelled">Cancelled</string>
    <string name="check_details">More Details</string>
    <string name="zero">0</string>
    <string name="rating_stars">+8</string>
    <string name="rescheduled">Re-Scheduled</string>
    <string name="welcome_user">WELCOME</string>
    <string name="enter_email_hint">Enter Your Email</string>
    <string name="enter_password_hint">Enter Your Password</string>
    <string name="enter_email_registered">Please enter your registered email to receive password reset link</string>
    <string name="sign_up_doctor">Sign Up As Doctor?</string>
    <string name="sign_up_patient">Sign Up As Patient?</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="profile">MY PROFILE</string>
    <string name="upload_profile">Upload Your Profile Picture</string>
    <string name="choosePicture">Choose Picture</string>
    <string name="upload">Upload Picture</string>
    <string name="patient_age">Patient\'s Age</string>
    <string name="appointmentName">My Appointment</string>
    <string name="doc_report">Doctor\'s Report</string>
    <string name="report">Patient\'s Report</string>
    <string name="report_title">Add Title For Your Report Here</string>
    <string name="description_report">Write Report For Patient To Read</string>
    <string name="select_email">Select an Email To View Doctors Details</string>
    <string name="swipe">swipe</string>
    <string name="health_updates">Get Health Updates</string>
    <string name="no_appointments">No New  Appointments Today</string>
    <string name="appointments_cancelled">APPOINTMENTS CANCELLED</string>
    <string name="bookyourappointment">Book Your Appointment Conveniently!</string>
</resources>