<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A446B"
    tools:context=".GetAppointmentDetails">

    <View
        android:id="@+id/view43"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginTop="30dp"
        android:background="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:fontFamily="serif-monospace"
        android:text="@string/descriptiontext"
        android:textAlignment="center"
        android:textColor="#1A446B"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <EditText
        android:id="@+id/editTextTextMyDescription"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:background="#ffffff"
        android:ellipsize="end"
        android:hint="@string/symptomshint"
        android:inputType="textPersonName"
        android:maxLines="3"
        android:textColor="#1A446B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:fontFamily="serif-monospace"
        android:text="@string/timeavailableCAPS"
        android:textColor="#1A446B"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMyDescription" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="280dp"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_white_and_blue_border_background"
        android:fontFamily="serif-monospace"
        android:paddingTop="4dp"
        android:text="@string/details"
        android:textAlignment="center"
        android:textColor="#1A446B"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view43" />

    <Spinner
        android:id="@+id/spinnerTimeBooking"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/time_availability"
        android:popupBackground="@drawable/spinnerbackground"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMyDescription" />

    <Button
        android:id="@+id/buttonDoneSaveAppointment2"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/navy"
        android:fontFamily="monospace"
        android:text="@string/textokay"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPatientAge_new" />

    <TextView
        android:id="@+id/textView85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:fontFamily="serif-monospace"
        android:text="@string/date_available"
        android:textColor="#1A446B"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <TextView
        android:id="@+id/textViewAppointmentDate_New"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:drawableEnd="@drawable/ic_baseline_date_range_24"
        android:drawablePadding="7dp"
        android:elevation="5dp"
        android:hint="@string/select_date_new"
        android:paddingStart="10dp"
        android:paddingTop="12dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:textAlignment="viewStart"
        android:textColor="#1A446B"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTimeBooking" />

    <TextView
        android:id="@+id/textView87"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:fontFamily="serif-monospace"
        android:text="@string/patients_age"
        android:textColor="#1A446B"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView85" />

    <EditText
        android:id="@+id/editTextPatientAge_new"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/enter_age"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView87"
        app:layout_constraintTop_toBottomOf="@+id/textViewAppointmentDate_New" />

</androidx.constraintlayout.widget.ConstraintLayout>