<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A446B"
    tools:context=".Doctor_Main_Page_NEW">

    <View
        android:id="@+id/view49"
        android:layout_width="match_parent"
        android:layout_height="540dp"
        android:background="@drawable/white_background_curved_tops"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView39"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/personwhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView39"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView91"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:text="@string/welcome"
        android:textColor="#808080"
        app:layout_constraintStart_toEndOf="@+id/imageView39"
        app:layout_constraintTop_toBottomOf="@+id/textView90" />

    <ImageView
        android:id="@+id/imageView40"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_baseline_settings_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView92"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/date"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/view49"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/view51"
        android:layout_width="345dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view49" />

    <ImageView
        android:id="@+id/imageView41"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginStart="-24dp"
        android:background="@drawable/doc_snipe"
        app:layout_constraintStart_toStartOf="@+id/view51"
        app:layout_constraintTop_toTopOf="@+id/view51" />

    <TextView
        android:id="@+id/textView93"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreboard"
        android:textColor="#1A446B"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view51"
        app:layout_constraintEnd_toEndOf="@+id/view49"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView94"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/appointment"
        app:layout_constraintEnd_toEndOf="@+id/view51"
        app:layout_constraintStart_toEndOf="@+id/imageView41"
        app:layout_constraintTop_toTopOf="@+id/view51" />

    <TextView
        android:id="@+id/textView95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/attended"
        android:textColor="#1F7102"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/imageView41"
        app:layout_constraintTop_toBottomOf="@+id/textView94" />

    <TextView
        android:id="@+id/textView96"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/cancelled"
        android:textColor="#830101"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/imageView41"
        app:layout_constraintTop_toBottomOf="@+id/textView95" />

    <TextView
        android:id="@+id/textView97"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
        android:drawablePadding="5dp"
        android:text="@string/check_details"
        android:textColor="#1A446B"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/view51"
        app:layout_constraintEnd_toEndOf="@+id/view51"
        app:layout_constraintTop_toBottomOf="@+id/textView96" />

    <TextView
        android:id="@+id/textView98"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/zero"
        android:textSize="17sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView95"
        app:layout_constraintEnd_toEndOf="@+id/view51" />

    <TextView
        android:id="@+id/textView99"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/zero"
        android:textSize="17sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView96"
        app:layout_constraintEnd_toEndOf="@+id/view51" />

    <Button
        android:id="@+id/button6"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/navy"
        android:text="Button"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/view49"
        app:layout_constraintTop_toBottomOf="@+id/view51" />

    <Button
        android:id="@+id/button7"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/navy"
        android:text="Button"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view51" />

    <Button
        android:id="@+id/button17"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/navy"
        android:text="Button"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/view49"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button18"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/navy"
        android:text="Button"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />
</androidx.constraintlayout.widget.ConstraintLayout>